--- a/P001736.opf/meta.yml
+++ b/P001736.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P001736
+id: P001736
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W3CN4660
   title: བསྐྱེད་རྫོགས་ཟུང་འཇུག་གི་མན་ངག་ལམ་འབྲས་བུ་དང་བཅས་པའི་ཆོས་སྐོར།
-  volume: ''
   author: ''
+  volumes: {}
