--- a/P001736.opf/layers/v001/Pagination.yml
+++ b/P001736.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5265a90899c74619be3681dbf4923e2a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   f3cbf339130a444593f78f626cb8d586:
