--- a/P001736.opf/meta.yml
+++ b/P001736.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P001736
 initial_creation_type: ocr
 created_at: 26/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:17:32.998547
 source_metadata:
   id: bdr:W3CN4660
   title: བསྐྱེད་རྫོགས་ཟུང་འཇུག་གི་མན་ངག་ལམ་འབྲས་བུ་དང་བཅས་པའི་ཆོས་སྐོར།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 548
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
